--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="container-result" wx:if="{{selectedRefectory}}">请前往<text class="text-result">{{selectedRefectory}}</text>完成用餐任务</view>
+  <view class="container-result" wx:if="{{selectedRefectory}}">请前往<text class="text-result">{{selectedRefectory.name}}</text>完成用餐任务</view>
   <view class="container-button">
     <button type="primary" class="button" bindtap="onStartSelect">请指引我前进方向</button>
     <button class="button button-secondary" bindtap="onDeleteandSelect" wx:if="{{selectedRefectory}}">怀疑人生，删除该项</button>
@@ -12,7 +12,8 @@
   </picker> 
   <view class="instruction">食堂列表</view>
   <view class="list-refectory" wx:for="{{refectorys}}">
-    <text class="item-refectory">{{item}}</text>
-    <button class="button-delete" data-refectory="{{item}}" bindtap="onDeleteOption">去除</button>
+    <text class="item-refectory">{{item.name}}</text>
+    <picker class="picker-ratio" data-refectory="{{item.name}}" bindchange="onRatioChange" range="{{ratioList}}" value="{{item.ratio-1}}">{{ratioList[item.ratio-1]}}</picker>
+    <button class="button-delete" data-refectory="{{item.name}}" bindtap="onDeleteOption">去除</button>
   </view>
 </view>
