--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -26,7 +26,7 @@
 .item-refectory{
   display: inline-block;
   margin: 0;
-  width:400rpx;
+  width:360rpx;
   text-align: center;
 }
 
@@ -51,8 +51,17 @@
   line-height: 1.6;
   background: #f00;
   color: #fff;
+  margin-right: 50rpx;
 }
 
 .text-result{
   color: #2e2930;
+}
+
+.picker-ratio{
+  display: inline-block;
+  width: 160rpx;
+  text-align: center;
+  border-bottom: 1px solid #ccc;
+  margin-right: 40rpx;
 }
