--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,7 +4,7 @@
   <view class="container-button">
     <button type="primary" class="button" bindtap="onStartSelect">请指引我前进方向</button>
     <button class="button button-secondary" bindtap="onDeleteandSelect" wx:if="{{selectedRefectory}}">怀疑人生，删除该食堂</button>
-    <button class="button button-reset" bindtap="onReset" wx:if="{{selectedRefectory}}">换下一顿饭，重置食堂</button>
+    <button class="button button-reset" bindtap="onReset">换下一顿饭，重置食堂</button>
   </view>
   <picker class="picker-school" bindchange="onSchoolChange" bindtap="onSchoolSelect" value="index" range="{{schoolList}}">
     <view class="picker-selected">
